--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "concurrently": "^6.4.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
+    "file-loader": "^6.2.0",
     "mongodb": "^4.2.0",
     "mongoose": "^5.9.13",
     "nodemon": "^2.0.15",
