--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "concurrently": "^6.4.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.0",
     "mongoose": "^5.9.13",
     "nodemon": "^2.0.15",
+    "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2"
